@@ -141,6 +141,22 @@
 
 <build>
     <plugins>
+    	<plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.1</version>
+			<configuration>
+				<url>http://localhost:8888/irms</url>
+				<port>8888</port>
+				<path>/irms</path>
+				<uriEncoding>UTF-8</uriEncoding>
+				<finalName>irms</finalName>
+				<server>tomcat7</server>
+				<systemProperties>
+					<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+				</systemProperties>
+			</configuration>
+		</plugin>
         <plugin>
             <artifactId>maven-eclipse-plugin</artifactId>
             <version>2.9</version>
